# serverless-intro-netlify

./: Cargo.toml  fixture.json
site/: index.html
src/: main.rs
