[package]
name = "serverless-intro-netlify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = { version = "0.11.1", default-features = false, features = [
    "apigw_rest",
] }
tokio = { version = "1.37.0", features = ["macros"] }
